--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,29 @@
-version: '3.8'
+version: '3.9'
+
 services:
+
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: bar-tally-app
     restart: unless-stopped
-    working_dir: /var/www/
+    environment:
+      APP_ENV: production
+      APP_DEBUG: "false"
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: bar_tally_db
+      DB_USERNAME: admin
+      DB_PASSWORD: admin
+      REDIS_HOST: redis
+      MYSQL_ROOT_PASSWORD: root
     volumes:
-      - ./:/var/www
+      - .:/var/www
+    depends_on:
+      - db
     networks:
       - laravel
-    ports:
-        - "8005:80"
+
   nginx:
     image: nginx:alpine
     container_name: bar-tally-nginx
@@ -20,34 +31,74 @@ services:
     ports:
       - "8005:80"
     volumes:
-      - ./:/var/www
-      - ./nginx:/etc/nginx/conf.d/
+      - .:/var/www
+      - ./nginx:/etc/nginx/conf.d
+    depends_on:
+      - app
     networks:
       - laravel
 
   db:
     image: mysql:8.0
+    command: --ssl=0 --skip-ssl --authentication_policy=mysql_native_password
     container_name: bar-tally-mysql
     restart: unless-stopped
-    ports:
-      - "3308:3306"
     environment:
-      MYSQL_DATABASE: bar-tally
-
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mysql
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
-      MYSQL_ROOT_PASSWORD: root
     volumes:
       - mysqldata:/var/lib/mysql
+      - ./docker/mysql-init:/docker-entrypoint-initdb.d
+
     networks:
       - laravel
+    ports:
+      - "3308:3306"
 
   redis:
     image: redis:alpine
     container_name: bar-tally-redis
     restart: unless-stopped
-    ports:
-    - "6380:6379"
+    networks:
+      - laravel
+
+  scheduler:
+    build: .
+    container_name: bar-tally-scheduler
+    command: ["sh", "-c", "php /var/www/artisan schedule:work"]
+    volumes:
+      - .:/var/www
+    environment:
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: bar_tally_db
+      DB_USERNAME: admin
+      DB_PASSWORD: admin
+      REDIS_HOST: redis
+    depends_on:
+      - db
+      - redis
+    networks:
+      - laravel
+
+  queue:
+    build: .
+    container_name: bar-tally-queue
+    command: ["sh", "-c", "php /var/www/artisan queue:work --tries=3"]
+    volumes:
+      - .:/var/www
+    environment:
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: bar_tally_db
+      DB_USERNAME: admin
+      DB_PASSWORD: admin
+      REDIS_HOST: redis
+    depends_on:
+      - db
+      - redis
     networks:
       - laravel
 
