--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "blade-ui-kit/blade-icons": "^1.8",
+        "fakerphp/faker": "^1.23",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.32",
@@ -16,9 +17,8 @@
         "league/csv": "^9.23",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^2.0",
-        "pxlrbt/filament-excel": "^2.4",
-        "spatie/laravel-multitenancy": "^4.0",
-        "fakerphp/faker": "^1.23"
+        "pxlrbt/filament-excel": "^2.5",
+        "spatie/laravel-multitenancy": "^4.0"
     },
     "require-dev": {
         "laravel/breeze": "^2.3",
